--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -53,7 +53,7 @@ body {
 }
 
 #profile_header {
-	height: 620px;
+	height: 700px;
 }
 
 #best_worst {
